--- a/views/uploadProjectRepository.ejs
+++ b/views/uploadProjectRepository.ejs
@@ -76,7 +76,7 @@
                         </div>
                         <div class="form-group mb-4">
                             <label for="projectObjective">Project Objective</label>
-                            <textarea class="form-control" id="projectDescription" name="projectDescription" rows="3"
+                            <textarea class="form-control" id="objective" name="objective" rows="3"
                                 required></textarea>
                         </div>
                         <div class="form-group mb-4">
